--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "author": "Leo4815162342",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^4.1.8",
+    "babel-preset-es2015": "^6.6.0",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.16.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
+    "gulp-babel": "^6.1.2",
     "gulp-combine-media-queries": "^0.2.0",
+    "gulp-combine-mq": "^0.4.0",
     "gulp-connect": "^2.2.0",
     "gulp-csscomb": "^3.0.6",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.2.0"
   }
 }
